--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SPA Center - Beauty & Spa HTML Template</title>
+    <title>ELITE Hair & Beauty - Tuni</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Elite Hair & Beauty Saloon Tuni" name="keywords">
+    <meta content="Elite Hair & Beauty - Tuni" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
